--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <script src="game.js"></script>
 </head>
 <body>
-    
+    <div>
+        <button id ="rock">rock</button>
+        <button id ="paper">paper</button>
+        <button id ="scissors">scissors</button>
+    </div>
 </body>
 </html>
